--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,53 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <link rel = "stylesheet" type = "text/css" href = "grid.css">
+    <link rel = "stylesheet" type = "text/css" href = "style.css">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <header class="my-header">
+      <h1 class="heading-1">Blog Me</h1>
+      <nav id="root-nav" class="options"></nav>
+      <!------
+      <input type="text" placeholder="Type here..." class="search-box">
+      <button type="button" class="search-box"><ion-icon name="search-outline"></ion-icon></button>
+      ------>
+    </header>
+    <section id="news-of-the-day">
+    </section>
+    <h4>My photos</h4><br>
+    <section class="my-dog">
+      <ul class="my-all-dog clearfix">
+        <li>
+            <figure class="dog-photo">
+                <img src="img/pic1.jpg" alt="My dog photo"/>
+            </figure>
+        </li>
+        <li>
+          <figure class="dog-photo">
+              <img src="img/pic2.jpg" alt="My dog photo"/>
+          </figure>
+        </li>
+        <li>
+          <figure class="dog-photo">
+              <img src="img/pic3.jpg" alt="My dog photo"/>
+          </figure>
+        </li>
+      </ul>
+    </section>
+    <br>
+    <h4>Your friend's quote</h4>
+    <hr class="break-line">
+    <section id="others-acc"> 
+    </section>
+    <footer>
+      <div class="row footer">
+        <p>Author: Manh Hai Phi<br>
+        <a href="#">phimanhhai01@example.com</a></p>
+      </div>
+    </footer>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
   </body>
 </html>
